changed survey file

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -29,7 +29,7 @@
     <hr>
 
     <h3><strong>Question 1</strong></h3>
-    <h4>Do You enjoy making New Friends</h4>
+    <h4>You enjoy making New Friends</h4>
     <select data-placeholder="" class="chosen-select" id="q1">
       <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -137,7 +137,7 @@
         </select><div class="chosen-container chosen-container-single" style="width: 140px;" title="" id="q8_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
 
     <h3><strong>Question 9</strong></h3>
-    <h4>You always keep other people's secrets.</h4>
+    <h4>Do You always keep other people's secrets.</h4>
     <select data-placeholder="" class="chosen-select" id="q9">
       <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -148,7 +148,7 @@
         </select><div class="chosen-container chosen-container-single" style="width: 140px;" title="" id="q9_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
 
     <h3><strong>Question 10</strong></h3>
-    <h4>None of your close friends has ever upset yo.</h4>
+    <h4>People can rarely upset you.</h4>
     <select data-placeholder="" class="chosen-select" id="q10">
       <option value=""></option>
             <option value="1">1 (Strongly Disagree)</option>
